# pytfeeder

./: README.md  default_config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
examples/go-ytfeeder-rofi/: go.mod  go.sum
examples/go-ytfeeder-rofi/cmd/: main.go
examples/go-ytfeeder-rofi/internal/config/: config.go  paths.go
examples/go-ytfeeder-rofi/internal/models/: models.go
examples/go-ytfeeder-rofi/internal/storage/: db.go  storage.go
examples/go-ytfeeder-rofi/rofi/: helper.sh
examples/i3block/: pytfeeder.sh
examples/rofi/: helper.sh  launcher.sh
examples/rofi/go/rofi/: helper.sh  (+1 more)
examples/rofi/python/: helper.py  helper.sh  launcher.sh  rofi_config.toml  rofi_config.yaml
examples/scripts/: env  tsp-fail-handler
examples/scripts/download-fail-handler/: env  tsp-fail-handler.sh
examples/scripts/hidden-toggler/: hidden-toggler.py
examples/tui/: main.py
examples/tui/curses/: main.py
examples/tui/fzf/: pytfeeder-fzf  pytfeeder-fzf.bash
examples/tui/prompt_toolkit/: main.py
pytfeeder/: __init__.py  args.py  config.py  consts.py  defaults.py  dirs.py  feeder.py  logger.py  models.py  parser.py  storage.py  updater.py  utils.py
pytfeeder/entry_points/: run_pytfeeder.py  run_pytfeeder_curses.py  run_pytfeeder_curses_back.py  run_pytfeeder_pt.py  run_pytfeeder_rofi.py
pytfeeder/migrations/: 0001_create_table.sql  0002_add_is_deleted_column.sql
pytfeeder/rofi/: __init__.py  args.py  config.py  consts.py  printer.py
pytfeeder/storage/: __init__.py  hooks.py  queries.py  storage.py
pytfeeder/tui/: __init__.py  app.py  args.py  cmd.py  config.py  consts.py  props.py  updater.py  updates.py
tests/: mocks.py  test_config.py  test_feeder.py  test_parser.py  test_stats_fmt.py  test_storage.py  utils.py
tests/args/: test_rofi_args.py  test_tui_args.py
tests/config/: config_mocks.py  test_config_args.py  test_config_data_dir.py  test_config_dump.py  test_config_dump_channels.py
tests/curses/: test_move_next_prev.py
tests/storage/: test_delete_inactive.py  test_is_deleted.py  test_is_viewed.py  test_mark_all_entries_as_watched.py  test_migration_fails.py  test_select_channels_stats.py  test_select_entries.py  test_stats.py  test_storage_is_deleted.py  test_storage_is_viewed.py  test_storage_stats.py
tests/tui/: test_move_next_prev.py
(+5 files in other folders)
