[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytfeeder"
dynamic = ["version"]
dependencies = ["aiohttp", "PyYAML"]
requires-python = ">= 3.10"
# license = "GPL-3.0-or-later"
# license-files = ["LICEN[CS]E*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pytfeeder*"]

[tool.setuptools.dynamic]
version = {attr = "pytfeeder.__version__"}

[tool.setuptools.package-data]
"pytfeeder" = ["migrations/*.sql"]

[project.optional-dependencies]
pt = ["prompt_toolkit"]
ytdl = ["yt-dlp"]

[project.scripts]
pytfeeder = "pytfeeder.entry_points.run_pytfeeder:run"
pytfeeder-curses = "pytfeeder.entry_points.run_pytfeeder_curses:main"
pytfeeder-pt = "pytfeeder.entry_points.run_pytfeeder_pt:main"
pytfeeder-rofi = "pytfeeder.entry_points.run_pytfeeder_rofi:main"
