[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytfeeder"
dynamic = ["version"]
dependencies = [
    "aiohttp",
    "PyYAML",
    "windows-curses; sys_platform == 'win32'"
]
requires-python = ">= 3.10"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pytfeeder*"]

[tool.setuptools.dynamic]
version = {attr = "pytfeeder.__version__"}

[tool.setuptools.package-data]
"pytfeeder" = ["migrations/*.sql"]

[project.optional-dependencies]
ytdl = ["yt-dlp"]

[project.scripts]
pytfeeder = "pytfeeder.entry_points.run_pytfeeder:main"
pytfeeder-curses = "pytfeeder.entry_points.run_pytfeeder_curses:main"
